Java 11 support for tzinfo generation